--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,120 +1,113 @@
-<section style="background-color: #eee; padding: 30px;">
-    <div class="row">
-        <!-- User Profile -->
-        <div class="col-lg-4">
-            <div class="card mb-4">
-                <div class="card-body text-center">
-                    <img src="{{userInfo.profileImage}}" alt="avatar" class="rounded-circle img-fluid"
-                        style="width: 150px;">
-                    <h5 class="my-3">{{userInfo.userName}}</h5>
-                    <p class="text-muted mb-1">{{userInfo.roles[0]}}</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- User Information and Password Change -->
-        <div class="col-lg-8">
-            <div class="card mb-4">
-                <div class="card-body">
-                    <!-- Full Name -->
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <p class="mb-0">{{ 'profile.fullName' | translate }}</p>
-                        </div>
-                        <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{userInfo.name}}</p>
-                        </div>
-                    </div>
-                    <hr>
-                    <!-- Email -->
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <p class="mb-0">{{ 'profile.email' | translate }}</p>
-                        </div>
-                        <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{userInfo.email}}</p>
-                        </div>
-                    </div>
-                    <hr>
-                    <!-- Phone -->
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <p class="mb-0">{{ 'profile.phone' | translate }}</p>
-                        </div>
-                        <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{userInfo.phoneNumber}}</p>
-                        </div>
-                    </div>
-                    <hr>
-                    <!-- Warehouse ID -->
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <p class="mb-0">{{ 'profile.warehouseId' | translate }}</p>
-                        </div>
-                        <div class="col-sm-9">
-                            <p class="text-muted mb-0">{{userInfo.warehouseId}}</p>
-                        </div>
+<section style="background-color: #f1f5f9; padding: 60px 0;">
+    <div class="container">
+        <div class="row justify-content-center">
+            <!-- User Profile -->
+            <div class="col-lg-4">
+                <div class="card shadow-lg mb-4 border-0 rounded-lg">
+                    <div class="card-body text-center">
+                        <img src="{{userInfo.profileImage}}" alt="avatar" class="rounded-circle img-fluid mb-3"
+                            style="width: 150px;">
+                        <h5 class="my-3 font-weight-bold text-dark">{{userInfo.userName}}</h5>
+                        <p class="text-muted mb-2">{{userInfo.roles[0]}}</p>
                     </div>
                 </div>
             </div>
 
-            <!-- Change Password -->
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="card mb-4 mb-md-0">
+            <!-- User Information and Password Change -->
+            <div class="col-lg-8">
+                <div class="card shadow-lg mb-4 border-0 rounded-lg">
+                    <div class="card-body">
+                        <!-- Full Name -->
+                        <div class="row mb-3">
+                            <div class="col-sm-3">
+                                <p class="mb-0 text-dark font-weight-semibold">{{ 'profile.fullName' | translate }}</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0">{{userInfo.name}}</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- Email -->
+                        <div class="row mb-3">
+                            <div class="col-sm-3">
+                                <p class="mb-0 text-dark font-weight-semibold">{{ 'profile.email' | translate }}</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0">{{userInfo.email}}</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- Phone -->
+                        <div class="row mb-3">
+                            <div class="col-sm-3">
+                                <p class="mb-0 text-dark font-weight-semibold">{{ 'profile.phone' | translate }}</p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0">{{userInfo.phoneNumber}}</p>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- Warehouse ID -->
+                        <div class="row mb-3">
+                            <div class="col-sm-3">
+                                <p class="mb-0 text-dark font-weight-semibold">{{ 'profile.warehouseId' | translate }}
+                                </p>
+                            </div>
+                            <div class="col-sm-9">
+                                <p class="text-muted mb-0">{{userInfo.warehouseId}}</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="card mb-4 mb-md-0">
-                        <div class="card-body">
-                            <p class="mb-4">{{ 'profile.resetPassword' | translate }} <span
-                                    class="text-primary font-italic me-1">{{ 'profile.password' | translate }}</span>
-                            </p>
 
-                            <form [formGroup]="changePasswordForm">
-                                <!-- Old Password -->
-                                <div class="form-group mx-sm-3 mb-2">
-                                    <input type="password" class="form-control" formControlName="currentPassword"
-                                        id="inputPassword2" placeholder="{{ 'profile.oldPassword' | translate }}">
-                                </div>
-                                <div class="invalid-feedback form-group mx-sm-3 mb-2"
-                                    *ngIf="changePasswordForm.controls['currentPassword'].touched && changePasswordForm.controls['currentPassword'].hasError('required')"
-                                    [ngClass]="{ 'active': changePasswordForm.controls['currentPassword'].invalid }">
+                <!-- Change Password -->
+                <div class="card shadow-lg border-0 rounded-lg">
+                    <div class="card-body">
+                        <p class="mb-4 text-primary font-weight-semibold">
+                            {{ 'profile.resetPassword' | translate }} <span class="font-italic">{{ 'profile.password' |
+                                translate }}</span>
+                        </p>
+
+                        <form [formGroup]="changePasswordForm">
+                            <!-- Old Password -->
+                            <div class="form-group mb-3">
+                                <input type="password" class="form-control" formControlName="currentPassword"
+                                    id="inputPassword2" placeholder="{{ 'profile.oldPassword' | translate }}">
+                                <div class="invalid-feedback d-block"
+                                    *ngIf="changePasswordForm.controls['currentPassword'].touched && changePasswordForm.controls['currentPassword'].hasError('required')">
                                     {{ 'profile.oldPasswordRequired' | translate }}
                                 </div>
+                            </div>
 
-                                <!-- New Password -->
-                                <div class="form-group mx-sm-3 mb-2">
-                                    <input type="password" class="form-control" id="inputPassword2"
-                                        placeholder="{{ 'profile.newPassword' | translate }}"
-                                        formControlName="newPassword">
-                                </div>
-                                <div class="invalid-feedback form-group mx-sm-3 mb-2"
-                                    *ngIf="changePasswordForm.controls['newPassword'].touched && changePasswordForm.controls['newPassword'].hasError('required')"
-                                    [ngClass]="{ 'active': changePasswordForm.controls['newPassword'].invalid }">
+                            <!-- New Password -->
+                            <div class="form-group mb-3">
+                                <input type="password" class="form-control" id="inputPassword2"
+                                    placeholder="{{ 'profile.newPassword' | translate }}" formControlName="newPassword">
+                                <div class="invalid-feedback d-block"
+                                    *ngIf="changePasswordForm.controls['newPassword'].touched && changePasswordForm.controls['newPassword'].hasError('required')">
                                     {{ 'profile.newPasswordRequired' | translate }}
                                 </div>
+                            </div>
 
-                                <!-- Confirm Password -->
-                                <div class="form-group mx-sm-3 mb-2">
-                                    <input type="password" class="form-control" id="inputPassword2"
-                                        placeholder="{{ 'profile.confirmPassword' | translate }}"
-                                        formControlName="confirmPassword">
-                                </div>
-                                <div class="invalid-feedback form-group mx-sm-3 mb-2"
-                                    *ngIf="changePasswordForm.controls['confirmPassword'].touched && changePasswordForm.controls['confirmPassword'].hasError('required')"
-                                    [ngClass]="{ 'active': changePasswordForm.controls['confirmPassword'].invalid }">
+                            <!-- Confirm Password -->
+                            <div class="form-group mb-3">
+                                <input type="password" class="form-control" id="inputPassword2"
+                                    placeholder="{{ 'profile.confirmPassword' | translate }}"
+                                    formControlName="confirmPassword">
+                                <div class="invalid-feedback d-block"
+                                    *ngIf="changePasswordForm.controls['confirmPassword'].touched && changePasswordForm.controls['confirmPassword'].hasError('required')">
                                     {{ 'profile.confirmPasswordRequired' | translate }}
                                 </div>
+                            </div>
 
-                                <!-- Submit Button -->
-                                <div class="form-group mx-sm-3 mb-2">
-                                    <button type="button" class="btn btn-primary" (click)="changePasswordBtn()">
-                                        {{ 'profile.changePassword' | translate }}
-                                    </button>
-                                </div>
-                            </form>
-                        </div>
+                            <!-- Submit Button -->
+                            <div class="form-group">
+                                <button type="button" class="btn btn-primary btn-block rounded-pill"
+                                    (click)="changePasswordBtn()">
+                                    {{ 'profile.changePassword' | translate }}
+                                </button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
