--- a/src/app/warehouse-list/warehouse-list.component.html
+++ b/src/app/warehouse-list/warehouse-list.component.html
@@ -19,7 +19,7 @@
             <div class="dropdown">
                 <a id="navbarDropdownMenuAvatar" role="button" aria-expanded="false">
                     <img src="{{ profilImage }}" class="rounded-circle" height="45"
-                        alt="{{ 'navbar2.avatarAltText' | translate }}" loading="lazy" (click)="navigateToProfile()" />
+                        alt="{{ 'navbar.avatarAltText' | translate }}" loading="lazy" (click)="navigateToProfile()" />
                 </a>
             </div>
         </div>
