--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,12 +1,12 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-lg-8 col-md-10"
-            style="border: 1px solid #ccc; border-radius: 15px; padding: 40px; background-color: #f9f9f9;">
+        <div class="col-lg-8 col-md-10 form-container">
             <h2 class="text-center mb-4" *ngIf="!isEdit">{{ 'userForm.addUser' | translate }}</h2>
             <h2 class="text-center mb-4" *ngIf="isEdit">{{ 'userForm.updateUser' | translate }}</h2>
             <form [formGroup]="addUserForm">
+
+                <!-- User Name -->
                 <div class="form-row">
-                    <!-- User Name -->
                     <div class="form-group col-md-6">
                         <label for="userName">{{ 'userForm.userName' | translate }}</label>
                         <input type="text" class="form-control" formControlName="userName" id="userName"
@@ -73,16 +73,6 @@
                         </div>
                     </div>
 
-                    <!-- Image Upload -->
-                    <div class="form-group">
-                        <label for="image">{{ 'userForm.uploadImage' | translate }}</label>
-                        <input type="file" class="form-control" formControlName="image" (change)=" onFileChange($event)"
-                            id="image">
-                        <div class="invalid-feedback" *ngIf="imageError" [ngClass]="{ 'active': imageError }">
-                            {{ 'userForm.imageError' | translate }}
-                        </div>
-                    </div>
-
                     <!-- Role -->
                     <div class="form-group col-md-4">
                         <label for="roles">{{ 'userForm.role' | translate }}</label>
@@ -111,11 +101,21 @@
                     </div>
                 </div>
 
+                <!-- Image Upload -->
+                <div class="form-group">
+                    <label for="image">{{ 'userForm.uploadImage' | translate }}</label>
+                    <input type="file" class="form-control" formControlName="image" (change)=" onFileChange($event)"
+                        id="image">
+                    <div class="invalid-feedback" *ngIf="imageError" [ngClass]="{ 'active': imageError }">
+                        {{ 'userForm.imageError' | translate }}
+                    </div>
+                </div>
+
                 <!-- Buttons -->
-                <button type="button" class="btn btn-primary btn-block" *ngIf="!isEdit" style="margin-top: 20px;"
-                    (click)="saveBtn()">{{ 'userForm.save' | translate }}</button>
-                <button type="button" class="btn btn-primary btn-block" *ngIf="isEdit" style="margin-top: 20px;"
-                    (click)="update()">{{ 'userForm.update' | translate }}</button>
+                <button type="button" class="btn btn-primary  mt-3 btn-block" *ngIf="!isEdit" (click)="saveBtn()">{{
+                    'userForm.save' | translate }}</button>
+                <button type="button" class="btn btn-primary mt-3 btn-block" *ngIf="isEdit" (click)="update()">{{
+                    'userForm.update' | translate }}</button>
 
                 <!-- Error message for overall form validity -->
                 <div *ngIf="showError && !addUserForm.valid" class="text-danger text-center mt-3">
