--- a/src/app/products-list/products-list.component.css
+++ b/src/app/products-list/products-list.component.css
@@ -3,7 +3,7 @@
 .truncated {
     display: -webkit-box;
     -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
+
     /* Limit to 2 lines */
     overflow: hidden;
     text-overflow: ellipsis;
@@ -52,7 +52,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #007bff;
+    background: rgba(33, 37, 41, 1);
     cursor: pointer;
 }
 
@@ -60,7 +60,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #007bff;
+    background: rgba(33, 37, 41, 1);
     cursor: pointer;
 }
 
@@ -70,10 +70,81 @@
 }
 
 .slider:focus {
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 5px rgba(33, 37, 41, 1);
 }
 
 /* Style for when the slider value is changed */
 .slider:active {
-    background: #007bff;
+    background: rgba(33, 37, 41, 1);
+}
+
+.navbar {
+    border-bottom: 2px solid rgba(33, 37, 41, 1);
+}
+
+.form-range {
+    width: 100%;
+    height: 8px;
+    border-radius: 5px;
+    background: rgba(33, 37, 41, 1);
+    outline: none;
+    transition: background 0.3s ease;
+}
+
+.form-range:focus {
+    box-shadow: 0 0 5px rgba(33, 37, 41, 1);
+}
+
+
+.form-range::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: rgba(33, 37, 41, 1);
+    cursor: pointer;
+}
+
+.table {
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.table th {
+    background-color: white;
+    color: rgba(33, 37, 41, 1);
+    font-weight: 600;
+}
+
+.table tbody tr:hover {
+    background-color: rgba(33, 37, 41, 1);
+    cursor: pointer;
+}
+
+.btn-outline-primary:hover {
+    background-color: rgba(33, 37, 41, 1);
+    color: white;
+}
+
+.btn-primary {
+    background-color: rgba(33, 37, 41, 1);
+    border: none;
+    color: white;
+}
+
+.btn-primary:hover {
+    background-color: rgba(33, 37, 41, 1);
+}
+
+.badge.bg-danger {
+    font-size: 0.9em;
+    padding: 0.3rem 0.6rem;
+    border-radius: 0.25rem;
+}
+
+.bg-primary {
+    background-color: rgba(33, 37, 41, 1) !important;
+}
+
+.btn-success {
+    --bs-btn-bg: rgba(33, 37, 41, 1)
 }
